--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react-emoji": "^0.5.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^3.4.1",
     "react-scroll-to-bottom": "^2.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
