--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-scroll-to-bottom": "^2.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "yargs": "^15.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
