--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "client-install": "npm install --prefix client",
     "start": "nodemon server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "client": "npm start --prefix client"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "concurrently": "^5.2.0",
     "cor": "0.0.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
