--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "client-install": "npm install --prefix client",
     "start": "nodemon server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix client"
+    "client": "npm start --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "MIT",
